# feature_engine

./: .editorconfig  .gitignore  LICENSE  README.md  noxfile.py  setup.cfg  test2.yaml
feature_engine/: main.py  model.py
tests/: test_basic.py  test_invalid.py
tests/res/: basic.yaml  basic2.yaml  invalid_conflicting_relationships.yaml  invalid_mutually_exclusive_obligatory.yaml  invalid_nonunique_guids.yaml
