[metadata]
name = feature_engine
author = {{Author}}
author_email = {{AuthorEmail}}
version = attr: feature_engine.__version__
url = {{GitHubUrl}}
description = Feature engineering toolkit
long_description = file: README.md
long_description_content_type = text/markdown
keywords = feature-engineering
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    ruamel.yaml
    networkx
    matplotlib

[options.entry_points]
console_scripts =
    feature_engine = feature_engine.main:main

[options.extras_require]
dev = 
    pdoc3
    flake8 
    twine 
    setuptools
    autopep8

[flake8]
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .tox,
    .nox,
    .pytest_cache
max_complexity = 10
max_line_length = 100
ignore =
    E731
    E116
    E114
    E221
    E241